# poo-project

./: CMakeLists.txt  DetectChars.cpp  DetectChars.h  DetectPlates.h  PossiblePlate.h  Postprocess.cpp  Postprocess.h  README.md  classifications.xml  images.xml  main.cpp  main.h
